# volume-renderer

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  test.nc
assets/shaders/: raymarching.fs
scripts/: diffdvr.py  similarity.py
src/: camera.c  camera.h  camera.rs  camera_controller.rs  camera_sphere_controller.rs  gui.rs  lib.rs  main.c  main.rs  model.rs  netcdf.rs  screenshot.rs  shader.wgsl  sphere_screenshot_manager.rs  state.rs  texture.rs  texture_3d.rs  transform.rs  vertex.rs
src/compare/: mod.rs  netcdf.rs
src/loaders/: dat.rs  mod.rs  netcdf.rs
src/ray_marcher/: mod.rs  raymarcher.wgsl
src/voxel/: grid.rs  mod.rs  voxel.rs
src/voxel/init/: mod.rs  perlin.rs  pyramid.rs  sphere.rs
