[package]
name = "diffdvr-voxel"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19.3"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0.86"
glam = "0.28"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
