[package]
name = "diffdvr-voxel"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19.3"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0.86"
glam = "0.28"
noise = "0.9"
egui = "0.27.2"
egui-wgpu = { version = "0.27.2", features = ["winit"] }
egui-winit = "0.27.2"
flume = "0.11.0"
png = "0.17.13"
chrono = "0.4.38"
serde = { version = "1.0.205", features = ["derive"]}
serde_json = "1.0.122"
netcdf = { version = "0.9.0", features = ["static"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[profile.release.package.hdf5-src]
opt-level = 0